# mtb

./: .gitignore  .gitmodules  CMakeLists.txt
data/: def.scene  scene.json
data/lightning/: lightning.mtl
data/unreal_puppet/: def.alist
hlsl/: material.hlsli  shader.hlsli  simple.ps.hlsl
settings/: camera.json  dbg_ui.json  imgui.ini  light.json  window.json
src/: anim.cpp  anim.hpp  assimp_loader.cpp  assimp_loader.hpp  camera.cpp  camera.hpp  common.cpp  common.hpp  dbg_ui.cpp  dbg_ui.hpp  frame_timer.cpp  frame_timer.hpp  gfx.cpp  gfx.hpp  hou_geo.cpp  hou_geo.hpp  imgui.hpp  imgui_impl.cpp  imgui_impl.hpp  input.cpp  input.cppm  input.hpp  json_helpers.cpp  json_helpers.hpp  light.cpp  light.hpp  main.cpp  math.cpp  math.hpp  model.cpp  model.hpp  path_helpers.cpp  path_helpers.hpp  profiler.cpp  profiler.hpp  rdr.cpp  rdr.hpp  rdr_queue.cpp  rdr_queue.hpp  resource.hpp  (+12 more)
src/rdr/: anim.cpp  anim.hpp  camera.cpp  camera.hpp  cbufs.hpp  color.hpp  dbg_draw.cpp  dbg_draw.hpp  gfx.cpp  gfx.hpp  light.cpp  light.hpp  model.cpp  model.hpp  rdr.cpp  rdr.hpp  rdr_buf.hpp  rdr_queue.hpp  rig.cpp  rig.hpp  sh.hpp  texture.cpp  texture.hpp
src/res/: assimp_loader.cpp  hou_geo.cpp  path_helpers.cpp  resource.hpp  resource_load.cpp  resource_mgr.hpp
src/scene/: anim_sys.cpp  anim_sys.hpp  camera_mgr.cpp  camera_mgr.hpp  input_sys.cpp  input_sys.hpp  model_sys.cpp  model_sys.hpp  move_sys.cpp  move_sys.hpp  position_component.cpp  position_component.hpp  rig_component.cpp  rig_component.hpp  scene.cpp  scene.hpp  scene_components.hpp  scene_editor.cpp  scene_editor.hpp  scene_mgr.cpp  scene_mgr.hpp
